Deployments/cachet/010-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cachet
  labels:
    cert-manager-tls: nekomade-com
