Deployments/cachet/050-Service.yaml
# This is to set two accessible IP addresses
apiVersion: v1
kind: Service
metadata:
  name: cachet-lb
  namespace: cachet
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: cachet-server
---
apiVersion: v1
kind: Service
metadata:
  name: cachet-lb-dns
  namespace: cachet
spec:
  ports:
    - name: dns
      port: 53
      protocol: UDP
      targetPort: 53
    - name: httpsdns
      port: 853
      protocol: UDP
      targetPort: 853
  selector:
    app: cachet-server
