Deployments/cachet/060-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cachet-ingress
  namespace: cachet
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.alpha.kubernetes.io/hostname: status.nekomade.com
    external-dns.alpha.kubernetes.io/ttl: "120" #optional
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
spec:
  tls:
    # specifying a host in the TLS section will tell cert-manager what
    # DNS SANs should be on the created certificate.
    - hosts:
        - status.nekomade.com
      # cert-manager will create this secret (Referenced from the cert that was previously created)
      secretName: cachet-tls
  rules:
    - host: status.nekomade.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cachet-lb
                port:
                  number: 80
